--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,8 @@
   <main>
     <section class="about-us">
       <div class="container about-us__container">
-        <div class="about-us__image-block">
-          <picture>
+        <!-- <div class="about-us__image-block"> -->
+          <picture class="about-us__image-block">
             <source
             srcset="./images/about-us/about-img-desktop.jpg 1x, 
             ./images/about-us/about-img@x2.jpg 2x"
@@ -102,7 +102,7 @@
             alt="office photo">
             
         </picture>
-        </div>
+        <!-- </div> -->
         <div class="about-us__info">
           <h2 class="about-us__title">Несколько слов 
             о  компании</h2>
@@ -121,20 +121,20 @@
   <h2 class="benefits__title">Преимущества работы с компанией Rlider</h2>
   <ul class="benefits__list">
       <li class="benefits__item">
-              <image class="benefits__image" src="./images/svg/Group.svg"  alt="for seo"></image>
+              <img class="benefits__image" src="./images/svg/Group.svg"  alt="for seo" />
 
           <h3 class="benefits__item-title">Комплексное сопровождение</h3>
           <div class="benefits__line-item"></div>
           <p  class="benefits__item-paragraph">С момента первой консультации и до получения паспорта гражданина Евросоюза мы предоставляем нашим клиентам грамотную юридическую поддержку.</p>
       </li>
       <li class="benefits__item">
-        <image class="benefits__image" src="./images/svg/individual.svg"  alt="for seo"></image>
+        <img class="benefits__image" src="./images/svg/individual.svg"  alt="for seo" />
           <h3 class="benefits__item-title">Индивидуальный подбор плана иммиграции</h3>
           <div class="benefits__line-item"></div>
           <p  class="benefits__item-paragraph">Специалисты компании подберут для Вас наиболее выгодную государственную программу для получения второго паспорта ЕС.</p>
       </li>
       <li class="benefits__item">
-        <image class="benefits__image" src="./images/svg/confidential.svg" alt="for seo"></image>
+        <img class="benefits__image" src="./images/svg/confidential.svg" alt="for seo" />
           <h3 class="benefits__item-title">Соблюдение политики конфиденциальности</h3>
           <div class="benefits__line-item"></div>
           <p  class="benefits__item-paragraph">Компания строго придерживается принципов неразглашения персональной информации клиентов, оформляющих гражданство Евросоюза.</p>
@@ -198,7 +198,7 @@
       <ul class="our-team__list">
         <li class="our-team__list-item">
           <div class="our-team__photo-block">
-            <image class="our-team__image" src="./images/team/martynov.jpg"></image>
+            <img class="our-team__image" src="./images/team/martynov.jpg" alt="photo human"/>
           </div>
           <div class="our-team__info-block">
             <h4 class="our-team__name">Мартынов Иван</h4>
@@ -208,7 +208,7 @@
         </li>
         <li class="our-team__list-item">
           <div class="our-team__photo-block">
-            <image class="our-team__image" src="./images/team/romanova.png"></image>
+            <img class="our-team__image" src="./images/team/romanova.png" alt="photo human"/>
           </div>
           <div class="our-team__info-block">
             <h4 class="our-team__name">Романова Екатерина</h4>
@@ -218,7 +218,7 @@
         </li>
         <li class="our-team__list-item">
           <div class="our-team__photo-block">
-            <image class="our-team__image" src="./images/team/sokolov.png"></image>
+            <img class="our-team__image" src="./images/team/sokolov.png" alt="photo human"/>
           </div>
           <div class="our-team__info-block">
             <h4 class="our-team__name">Соколов Игорь</h4>
@@ -228,7 +228,7 @@
         </li>
         <li class="our-team__list-item">
           <div class="our-team__photo-block">
-            <image class="our-team__image" src="./images/team/petrova.jpg"></image>
+            <img class="our-team__image" src="./images/team/petrova.jpg" alt="photo human"/>
           </div>
           <div class="our-team__info-block">
             <h4 class="our-team__name">Петрова Ольга</h4>
@@ -267,7 +267,7 @@
         <ul class="news-events__list">
           <li class="news-events__item">
             <div class="news-events__photo-block">
-              <image class="news-events__image" src="./images/news-event/hangar-pass.png" alt="build"></image>
+              <img class="news-events__image" src="./images/news-event/hangar-pass.png" alt="build"/>
             </div>
             <div class="news-events__info">
               <span class="news-events__data">27 октября 2019</span>
@@ -277,7 +277,7 @@
           </li>
           <li class="news-events__item">
             <div class="news-events__photo-block">
-              <image class="news-events__image" src="./images/news-event/bulgar-pass.png" alt="sea"></image>
+              <img class="news-events__image" src="./images/news-event/bulgar-pass.png" alt="sea"/>
             </div>
             <div class="news-events__info">
               <span class="news-events__data">27 октября 2019</span>
@@ -287,7 +287,7 @@
           </li>
           <li class="news-events__item">
             <div class="news-events__photo-block">
-              <image class="news-events__image" src="./images/news-event/interest-news.png" alt="girl and noteboock"></image>  
+              <img class="news-events__image" src="./images/news-event/interest-news.png" alt="girl and noteboock"/> 
             </div>
             <div class="news-events__info">
               <span class="news-events__data">27 октября 2019</span>
